--- a/src/Views/Home.css
+++ b/src/Views/Home.css
@@ -5,18 +5,22 @@
   font-family: "Poppins", sans-serif;
 }
 
-.app {
+/*.app {
   background-color: #eff2f2;
-}
+}*/
 
 .app__body {
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center; */
-  margin-top: 50px;
+  justify-content: center;
+  flex-direction: row;
 }
 
-.app__createPost {
+.home{
   display: flex;
-  justify-content: center;
+  
+}
+
+.home__left{
+  flex: 0.2;
 }
